Project page version01

--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
     <div class="results-table">
         <div class="id-results">
             <h2 class="title is-3">Quantitative Results of Mask Reconstruction</h2>
-            <img src='./static/images/id_results.png'>
+            <img src='./static/images/id_results.PNG'>
         </div>
         <div class="ood-results">
-            <img src='./static/images/ood_results.png'>
+            <img src='./static/images/ood_results.PNG'>
         </div>
         <div class="table-description">
         <p>
